--- a/index.css
+++ b/index.css
@@ -30,7 +30,7 @@ button {
     color: #fff;
     padding: 10px 20px;
     border: none;
-    border-radius: 4px;
+    border-radius: 40%;
     cursor: pointer;
     font-size: 16px;
     transition: 0.3s;
